k8s/deployment-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutut-phpmyadmin
  namespace: tutut
  labels:
    app: tutut
    component: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tutut
      component: phpmyadmin
  template:
    metadata:
      labels:
        app: tutut
        component: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---
apiVersion: v1
kind: Service
metadata:
  name: tutut-phpmyadmin
  namespace: tutut
  labels:
    app: tutut
    component: phpmyadmin
spec:
  selector:
    app: tutut
    component: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      name: http
