k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutut-app-ingress
  namespace: tutut
  labels:
    app: tutut
    component: app
  annotations:
    # TODO : ingress class and cert-manager
spec:
  tls:
    - hosts:
        - tutut.stbo.fr
      secretName: tutut-tls
  rules:
    - host: tutut.stbo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutut-app
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tutut-phpmyadmin-ingress
  namespace: tutut
  labels:
    app: tutut
    component: phpmyadmin
  annotations:
    # TODO : ingress class and cert-manager
    # TODO : basic auth or ip whitelisting
spec:
  tls:
    - hosts:
        - pma.tutut.stbo.fr
      secretName: tutut-pma-tls
  rules:
    - host: pma.tutut.stbo.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tutut-phpmyadmin
                port:
                  name: http
